api-bookinfo-vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: api-bookinfo
  namespace: bookinfo
spec:
  hosts:
    - api-bookinfo.apps.cluster-6ktdz.6ktdz.sandbox1110.opentlc.com
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            prefix: /api/v1/products
      route:
        - destination:
            host: productpage
            port:
              number: 9080
